<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Blade</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="add_to_current_playlist">Add to current playlist</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="library">Library</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="next">Next</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="added_ok">songs were added to playlist</string>
    <string name="added_next_ok">songs were added at current position</string>
    <string name="playlists">Playlists</string>
    <string name="prev">Previous</string>
    <string name="songs">Songs</string>
    <string name="title_activity_play">Playing</string>
    <string name="about">About</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="sources">Music sources</string>
    <string name="register_better_sources_expl">Blade will try for your songs that come from web services to find the
        best web service to play them, depending on priority
    </string>
    <string name="save_playlists_to_library_expl">Save playlist\'s songs to the library (Artist/Album/Songs views)
    </string>
    <string name="desc">Blade is an Android music player made by Valentin HAUDIQUET (@Valou3433). The goal of the
        project is to make an app capable to play songs from local library, Spotify, Deezer and SoundCloud.
    </string>
    <string name="register_better_sources_titl">Look for better sources</string>
    <string name="save_playlists_to_library_titl">Save playlists songs</string>
    <string name="format_unsupported">Unsupported file format</string>
    <string name="player_unknown_error">Unknown error of</string>
    <string name="player_error">Error of</string>
    <string name="player_login_error">Login error (bad login/pass, no premium) of</string>
    <string name="player_init">Initializing</string>
    <string name="pls_resync">You will need to re-synchronize library to apply setting</string>
    <string name="already_syncing">Already syncing...</string>
    <string name="search_lib">Search local library</string>
    <string name="search_web">Web search</string>
    <string name="empty">This list is empty</string>
    <string name="oncrash">Sorry, Blade just crashed. A report was sent to the developer. We hope next update will fix
        this bug ! :)
    </string>
    <string name="collaborative">Collaborative</string>
    <string name="add_to_playlist">Add to playlist...</string>
    <string name="cancel">Cancel</string>
    <string name="added_fail">Could not add to playlist</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="delete_from_playlist_ok">was removed from playlist</string>
    <string name="delete_from_playlist_fail">could not be removed from playlist</string>
    <string name="sync_fail_load">Wait for the library loading to synchronize</string>
    <string name="disconnect_ok">You are now disconnected. Please re-sync library !</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="manage_libraries">Manage libraries</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_delete">Are you sure that you want to delete this ?</string>
    <string name="delete_ok">was removed</string>
    <string name="delete_fail">could not be removed</string>
    <string name="library_added">was added to the library</string>
    <string name="library_add_fail">could not be added to the library</string>
    <string name="library_removed">a été supprimé de la bibliothèque</string>
    <string name="library_remove_fail">n\'a pas pu être supprimé de la bibliothèque</string>
    <string name="name">Name</string>
    <string name="new_playlist">New playlist...</string>
    <string name="playlist_add_fail">Could not create playlist</string>
    <string name="playback_error">Error during playback</string>
    <string name="playback_pause_error">Could not pause playback</string>
    <string name="please_grant_permission_msg">Read/Write external storage permission is required to read song list and
        edit library
    </string>
    <string name="please_grant_permission_title">Permission needed</string>
    <string name="libraries_used">Libraries used :</string>
    <string name="sync">Synchronization</string>
    <string name="link_to">Link to...</string>
    <string name="title_activity_tag_editor">Tag Editor</string>
    <string name="tag_edit">Edit informations</string>
    <string name="album">Album</string>
    <string name="artist">Artist</string>
    <string name="tag_save_failed">Could not save tags</string>
    <string name="give_perm_ext">Please give permission to access SD Card (in settings)</string>
    <string name="sd_perm">SD Card Permission</string>
    <string name="select_sd_card">Select folder that Blade will be able to access (SD Card root)</string>
    <string name="sd_perm_unneeded">This permission is only needed on Android KitKat (19) or more.</string>
    <string name="perm_granted">Permission granted</string>
    <string name="themes">Themes</string>
    <string name="track">Track number</string>
    <string name="year">Year</string>
    <string name="theme_nightly_desc">The default theme of Blade Nightly</string>
    <string name="theme_blade_desc">The default theme of Blade release</string>
    <string name="theme_green_desc">A clean green theme</string>
    <string name="theme_red_desc">A clean red theme</string>
    <string name="please_sd_root">Please select the SD Card root folder !</string>
    <string name="enable_song_change_anim">Enable animation on song change</string>
    <string name="link_manager">Song links manager</string>
    <string name="no_results_found">No results found</string>
    <string name="explore">Explore</string>
    <string name="theme_dark_desc">Join the dark side</string>
    <string name="lyrics">Lyrics</string>
    <string name="lyrics_obtention_err">Error occurred while getting song lyrics.</string>
    <string name="lyrics_not_found">Song lyrics not found. Sorry...</string>
    <string name="lyrics_parsing_error">Error occurred while parsing lyrics.</string>
    <string name="cache_cleaned">Cache was corrupted, Blade cleaned it. You might want to re-sync.</string>
    <string name="folders">Folders</string>
    <string name="internal_storage">Internal storage</string>
    <string name="external_storage">External storage</string>
    <string name="enable_folder_view">Enable folder view</string>
    <string name="folder_view_summary">Enable the Folder tab in library</string>
    <string name="spotify_connection_error">Spotify connection error...</string>
    <string name="artwork_edit">Artwork edit</string>
    <string name="data_saver_mode">Data saver mode</string>
</resources>